@@ -1,6 +1,7 @@
 2008-02-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fixed bug #7232: htmlArea RTE: In IE, selecting words with CTRL+SHIFT+Left doesn't activate "link" button
+	* Fixed bug #7525: htmlArea RTE: Page TSConfig property toggleborders.setOnTableCreation not honored
 
 2008-02-13  Benjamin Mack  <mack@xnos.org>
 
